@@ -36,7 +36,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: authfile.c,v 1.32 2001/04/18 23:44:51 markus Exp $");
+RCSID("$OpenBSD: authfile.c,v 1.33 2001/05/16 20:51:57 markus Exp $");
 
 #include <openssl/err.h>
 #include <openssl/evp.h>
@@ -558,7 +558,8 @@ key_load_private(const char *filename, const char *passphrase,
 	lseek(fd, (off_t) 0, SEEK_SET);		/* rewind */
 	if (pub == NULL) {
 		/* closes fd */
-		return key_load_private_pem(fd, KEY_UNSPEC, passphrase, NULL);
+		return key_load_private_pem(fd, KEY_UNSPEC, passphrase,
+		    commentp);
 	} else {
 		/* it's a SSH v1 key if the public key part is readable */
 		key_free(pub);
