@@ -6,6 +6,9 @@
    - deraadt@cvs.openbsd.org 2001/05/15 22:04:01
      [ssh.1]
      X11 forwarding details improved
+   - markus@cvs.openbsd.org 2001/05/16 20:51:57
+     [authfile.c]
+     return comments for private pem files, too; report from nolan@naic.edu
 
 20010512
  - OpenBSD CVS Sync
@@ -5411,4 +5414,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1220 2001/05/17 03:16:18 mouring Exp $
+$Id: ChangeLog,v 1.1221 2001/05/17 03:17:55 mouring Exp $
